--- a/AppCan_Project/asset-11655123/phone/zc/zccl.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zccl.html
@@ -16,7 +16,7 @@
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
             <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
                 <div class="ub">
-                    <div class="nav-btn" id="nav-left" v-on:click="backView">
+                    <div class="nav-btn" id="nav-left" onclick="uexWindow.close()">
                         <div class="fa fa-1g ub-img1 fa-chevron-left"></div>
                     </div>
                     <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">处理流程</h1>
