--- a/AppCan_Project/asset-11655123/phone/my/my_messages.html
+++ b/AppCan_Project/asset-11655123/phone/my/my_messages.html
@@ -27,6 +27,7 @@
                         </li>
                     </ul>
                 </div>
+                <div v-if="!msgs.length" class="page-tip">暂无消息</div>
             </div>
         </div>
         <script src="../js/appcan.js"></script>
