--- a/AppCan_Project/asset-11655123/phone/zc/zccl.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zccl.html
@@ -14,17 +14,8 @@
     </head>
     <body ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-            <div class="uh bc-head  ubb bc-border" data-control="HEADER" id="Header">
-                <div class="ub">
-                    <div class="nav-btn" id="nav-left" onclick="uexWindow.close()">
-                        <div class="fa fa-1g ub-img1 fa-chevron-left"></div>
-                    </div>
-                    <h1 class="ut ub-f1 ulev-3 ut-s tx-c" tabindex="0">处理流程</h1>
-                    <div class="nav-btn" id="nav-right">
-                        <component data-import="../component/user_info.html"></component>
-                    </div>
-                </div>
-            </div>
+            <header-component title="处理流程" v-bind:hasbackbtn="true"></header-component>
+            <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
                 <div class="ub ub-ver">
                     <div id="Title">资产查询检索</div>
@@ -34,16 +25,16 @@
                             <li class="ub-f1 ut-s ulev-app1">编码</li>
                             <li class="tx-r t-blu ulev-app1 ub-ae">
                                 <div class="uinput uinn4">
-                                    <input placeholder="请输入编码" type="text" class="tx-r " name="orderno" id="orderno">
+                                    <input placeholder="请输入编码" type="text" class="tx-r" v-model="zcid" name="zcID" >
                                 </div>
                             </li>
                         </ul>
                         <ul  class=" ubb ub bc-border bc-text ub-ac uinn">
                             <li class="ub-f1 ut-s ulev-app1">名称</li>
+                            <li class="ulev-app1 select-clear" v-show="name_index!=null" v-on:click="clearSelect('name_index')">×</li>
                             <li class="tx-r t-blu ulev-app1 ub-ae">
-                                
                                 <div class="select uba bc-border bc-text" id="as_name">
-                                    <div class="text">请选择</div>
+                                    <div class="text">{{name_index==null?'请选择':names[name_index]}}</div>
                                     <div class="icon"></div>
                                     <select id="asname" name="asname" v-model="name_index">
                                         <template v-for="(item,index) in names">
@@ -55,9 +46,10 @@
                         </ul>
                         <ul  class=" ubb ub bc-border bc-text ub-ac uinn">
                             <li class="ub-f1 ut-s ulev-app1"> 类型</li>
+                            <li class="ulev-app1 select-clear" v-show="type_index!=null" v-on:click="clearSelect('type_index')">×</li>
                             <li class="tx-r t-blu ulev-app1 ub-ae">
                                 <div class="select uba bc-border bc-text" id="as_type">
-                                    <div class="text">请选择</div>
+                                    <div class="text">{{type_index==null?'请选择':types[type_index]}}</div>
                                     <div class="icon"></div>
                                     <select id="astype" name="astype" v-model="type_index">
                                         <template v-for="(item,index) in types">
@@ -85,8 +77,8 @@
         
         <script src="../js/appcan.js"></script>
         <script src="../js/appcan.control.js"></script>
-        <script src="../js/template.import.js"></script>
         <script src="../js/vue/vue.js"></script> 
         <script src="../js/common.js"></script>
+        <script src="js/zichan.js"></script>
     </body>
 </html>
