--- a/AppCan_Project/asset-11655123/phone/zc/zcrk.html
+++ b/AppCan_Project/asset-11655123/phone/zc/zcrk.html
@@ -14,7 +14,7 @@
 </head>
 <body ontouchstart>
     <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-        <header-component v-bind:title="'资产入库'" v-bind:hasbackbtn="true"></header-component>
+        <header-component title="资产入库" v-bind:hasbackbtn="true"></header-component>
         <upload-dialog :show_dialog="showDialog" operate_type="入库" v-on:toggle-detail="toggleDialog"
             :select_zcuuid="selectZcUuid" v-on:tr-complete="rkComplete">
         </upload-dialog>
