--- a/AppCan_Project/asset-11655123/phone/login.html
+++ b/AppCan_Project/asset-11655123/phone/login.html
@@ -13,7 +13,7 @@
     </head>
     <body class="" ontouchstart>
         <div class="bc-bg" tabindex="0" data-control="PAGE" id="Page">
-            <header-component v-bind:title="'登录'" v-bind:hasbackbtn="false"></header-component>
+            <header-component title="登录" v-bind:hasbackbtn="false"></header-component>
             <loading-component ></loading-component>
             <div data-control="CONTENT" id="ScrollContent">
                 <div class="ub-fh">
